2012-03-26  Murray Cumming  <murrayc@murrayc.com>

	Dialog_Import_CSV_Progress: Fix a typo.

	* glom/import_csv/dialog_import_csv_progress.cc: Call get_parser_state()
	instead of get_state(). It was calling Widget::get_state() and the 
	compiler did not complain that we did not get the enum type that we
	expected.

2012-03-22  Murray Cumming  <murrayc@murrayc.com>

	Tests: Set LC_TIME too.

	* tests/test_glom_date_in_locales.sh:
	* tests/test_selfhosting_new_from_example_in_locales.sh:
	This seems to be necessary in Ubuntu Precise.

2012-03-14  Murray Cumming  <murrayc@murrayc.com>

	Fix some simple warnings found by clang++

	* glom/appwindow.cc:
	* glom/dialog_existing_or_new.cc:
	* glom/frame_glom.cc:
	* glom/glom_import_po_all.cc:
	* glom/libglom/data_structure/layout/layoutitem_field.cc:
	* glom/mode_data/db_adddel/db_adddel.cc:
	* glom/mode_design/fields/box_db_table_definition.cc:
	* glom/mode_design/layout/layout_item_dialogs/box_formatting.cc:
	* glom/utility_widgets/adddel/adddel.cc:
	I just did export CXX=clang++ before running autogen.sh.

2012-03-05  Murray Cumming  <murrayc@murrayc.com>

	Utils::get_find_where_clause_quick(): Handle an empty value properly.

	* glom/libglom/utils.cc: get_find_where_clause_quick():
	Handle an empty quick_search value properly, returning an empty
	where clause.

2012-03-03  Ben Konrath  <ben@bagu.org>

	Remove empty group in the Lesson Planner example file.

	The empty group was at the bottome of the Rooms table details view.

	https://bugzilla.gnome.org/show_bug.cgi?id=671263

	* examples/example_lesson_planner.glom:

2012-03-01  Murray Cumming  <murrayc@murrayc.com>

	Add a unistd.h include to fix the mingw MS Windows build.

	* glom/glom_create_from_example.cc: include unistd.h for getpass().
	Bug #671120 (alien)

2012-03-01  Murray Cumming  <murrayc@murrayc.com>

	More windows build fixes.

	* glom/libglom/connectionpool_backends/postgres.cc: Add an include and change